# WASM2010

./: .dockerignore  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
public/: index.html
src/: App.vue  app.scss  main.ts  shims-vue.d.ts  shims.d.ts  types.ts
src/asm2010/: .clang-format  Makefile  README.md  compile_flags.txt
src/asm2010/src/: about.h  as_parse.c  as_parse.h  cs2010.c  cs2010.h  cs_instructions.c  cs_instructions.h  cs_memory.h  cs_op.c  cs_registers.h  hash_table.c  hash_table.h  parse.c  parse.h  trace_log.c  trace_log.h  utils.c  utils.h  wasm.c  wasm.h
src/asm2010/wrapper/: index.ts  io.ts
src/assets/styles/: general.scss
src/components/: App.vue  Assembler.vue  Editor.vue  Emulator.vue  ExamplesSidebar.vue  Simulator.vue  WasmAssembler.vue  WasmEmulator.vue
src/components/assembler/: WasmAssembler.vue
src/components/emulator/: Io.vue  IoPlayground.vue  Ram.vue  RamViewer.vue  Registers.vue  RegistersViewer.vue  ResponsiveTable.vue  Rom.vue  RomViewer.vue  SettingsModal.vue  Signals.vue  SignalsViewer.vue  Table.vue  ViewerCurtains.vue  WasmEmulator.vue
src/core/ts/: index.ts  io.ts  logic.ts  types.ts
src/core/wasm/: .gitignore  CMakeLists.txt  Makefile
src/core/wasm/examples/asm/cs3/: io-buttons.asm  io-keyboard.asm
src/core/wasm/src/: wasm_glue.c
src/store/: wasmStore.ts
src/stores/: assembler.ts  emulator.ts  global.ts  index.ts
src/utils/: array.ts  file.ts  format.ts  math.ts  string.ts
(+68 files in other folders)
